fix/mobile-ui: Update style on mobile view footer

--- a/src/styles/cardContainer.scss
+++ b/src/styles/cardContainer.scss
@@ -1,6 +1,5 @@
 .cardContainer {
-  border-top: 1px;
-  border-style: solid;
+  border-top: 1px solid;
   @apply dark:border-neutral-700 border-neutral-800;
   @apply dark:bg-[#111] bg-white;
   padding-block: 3rem;
@@ -21,15 +20,15 @@
     padding-inline: 2rem; 
   }
 
-  @media (max-width: 640px) { 
-    padding-block: 2rem; 
-    padding-inline: 1rem; 
-  }
+  // @media (max-width: 640px) { 
+  //   padding-block: 2rem; 
+  //   padding-inline: 1rem; 
+  // }
 
-  @media (max-width: 480px) {  // For smaller mobile phones
-    padding-block: 1.5rem;  // Reduce vertical padding further
-    padding-inline: 0.5rem;  // Reduce horizontal padding further 
-  }
+  // @media (max-width: 480px) {  // For smaller mobile phones
+  //   padding-block: 1.5rem;  // Reduce vertical padding further
+  //   padding-inline: 0.5rem;  // Reduce horizontal padding further 
+  // }
 
   &__small {
     &:before {
